  Version 3.20
  1. Patch from David Wheeler for CGI::Cookie->bake(). Uses mod_perl headers_out->add()
	rather than headers_out->set().

  Version 3.19
  1. Added patch from Stephen Frost that allows one to suppress use of the temp file that is
	created during uploads.
  2. Fixed problem noted by Martin Foster in which regular expression meta-character terms
	in the path information were not quoted, causing URL parsing
	to fail on URLs that contained metacharacters (such as +).
  3. More fixes to the url() method.
  4. Removed "hack to fix broken PATH_INFO in MSII".

  Version 3.18
  1.  Doc typo fixes.
  2.  Patch from Steve Peters to default the document type to match the charset.
  3.  Fixed param() so that param(-name=>'foo',-values=>[]) sets the parameter to empty list.

  Version 3.17 Fri Feb 24 14:01:27 EST 2006
   1. Added patch from Mike Hanafey which caused 0 arguments to CGI::Cookie->new() to
	be treated as empty.
   2. Patch to CGI::Carp from Peter Whaite to fix the unfixable problem of CGI::Carp
     not behaving correctly in an eval() context.
   3. CGI::Fast->new() calls CGI->_reset_globals to avoid contamination of one session
	with another's variables.
   4. Fixed upload failure on files that contain semicolons in their names.

  Version 3.16 Wed Feb  8 13:29:11 EST 2006
   1. header() -charset option now works even when the MIME type is not "text".
   2. Fixed documentation for cookie() function and fastCGI.
   3. Upload filehandles now only closed automatically on Windows systems.
   4. Apache::Cookie compatibility fix from David Wheeler
   5. CGI::Carp->fatalsToBrowser() does not work correctly with
	mod_perl 2. No workaround is known.
   6. Fixed text status code associated with 302 redirects. Should be "Found"
	but was "Moved".
   7. Fixed charset in start_html() and header() to be in synch.

  Version 3.15 Wed Dec  7 15:13:22 EST 2005
   1. Remove extraneous "?" from self_url() when URI contains a ? but no query string.
